--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
