--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "font-awesome": "^4.7.0",
     "google-map-react": "^2.2.1",
     "google-maps-react": "^2.0.6",
+    "leaflet": "^1.9.4",
     "mapbox-gl": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
